[gd_scene load_steps=6 format=3 uid="uid://bnuah53eq83cv"]

[ext_resource type="Texture2D" uid="uid://b06qrft6jhwre" path="res://game assets/open_chest_key.png" id="1_34cj2"]
[ext_resource type="Script" path="res://keychest_level1.gd" id="1_gnlnb"]
[ext_resource type="Texture2D" uid="uid://b7vi58s2dpi0b" path="res://game assets/open_chest.png" id="2_wnanf"]
[ext_resource type="Texture2D" uid="uid://c3d76jf5c31hi" path="res://game assets/close_chest.png" id="2_xlltf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fxiq"]
size = Vector2(58, 42)

[node name="Key_Chest" type="StaticBody2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("1_gnlnb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_0fxiq")

[node name="OpenChest" type="Sprite2D" parent="Area2D"]
position = Vector2(0, -1)
texture = ExtResource("2_wnanf")

[node name="OpenChestKey" type="Sprite2D" parent="Area2D"]
position = Vector2(0, -1)
texture = ExtResource("1_34cj2")

[node name="CloseChest" type="Sprite2D" parent="Area2D"]
position = Vector2(0, -1)
scale = Vector2(1.09375, 1.12069)
texture = ExtResource("2_xlltf")

[node name="InteractLabel" type="Label" parent="Area2D"]
offset_left = -45.0
offset_top = -41.0
offset_right = 45.0
offset_bottom = -18.0

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
